--- a/web-developer.html
+++ b/web-developer.html
@@ -86,7 +86,7 @@
 <p><span class="badge badge-light">Montreal, Quebec, Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/sundial/job/yoaoxxprrsm8bezxza5pzgek4r'>Certified Microsoft .NET web Developer II (16128) | Sundial Software Career Opportunities</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/sundial/job/yoaoxxprrsm8bezxza5pzgek4r'>Certified Microsoft .NET web Developer II (16128) | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -117,7 +117,7 @@ machine learning alongside financial engineering to continuously turn data into?
 Engineering; Employment Type: Experienced Professionals; Division: Pelion 
 Platform?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/istreamplanet/job/oY4Cafwy'>iStreamPlanet Careers - Senior Software Engineer - Web Development</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/istreamplanet/job/oY4Cafwy'>iStreamPlanet Careers - Senior Software Engineer - Web Development</a></h5> 
 <p><span class="badge badge-light">Seattle Atlanta New York Austin Los Angeles Denver Chicago Seattle</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -150,7 +150,7 @@ with any of these technologies: flask /django, postgres/mysql, react/vuejs, css3
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://westphalia-datalab.join.com/jobs/260979-web-developer-w-m-d'>Job @ Westphalia DataLab (M?nster): Web Developer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westphalia-datalab.join.com/jobs/260979-web-developer-w-m-d'>Job @ Westphalia DataLab (M?nster): Web Developer... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>vor 4 Tagen ... Westphalia DataLab GmbH has a job opening for Web Developer (w/m/d) in 
 M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p>
@@ -225,7 +225,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/silver-peak/job/on2zafwS'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/silver-peak/job/on2zafwS'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -233,7 +233,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Frontend Web Developer - Roku at created 10-Jul-2019.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ferratum/4733341a-c221-4914-9e01-b7847cbe1736'>Ferratum Group - Web Analytics Developer - Google related web development</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ferratum/4733341a-c221-4914-9e01-b7847cbe1736'>Ferratum Group - Web Analytics Developer - Google related web development</a></h5> 
 <p><span class="badge badge-light">Helsinki, Finland North America</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -243,7 +243,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://aicrowd.recruitee.com/o/web-application-developer-rails'>Web Application Developer (Rails) - AIcrowd</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aicrowd.recruitee.com/o/web-application-developer-rails'>Web Application Developer (Rails) - AIcrowd</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... At AIcrowd, we're looking to grow our team with a Web Application Developer (
 Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?...</p>
@@ -272,7 +272,7 @@ Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?.
 <p><span class="badge badge-light">Toronto Richmond Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://scopicsoftware.recruiterbox.com/jobs/fk03mxe'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://scopicsoftware.recruiterbox.com/jobs/fk03mxe'>
     Remote Junior Web Developer at Scopic Software
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -323,7 +323,7 @@ a full team of technology professionals to take projects from design specs to?..
 Responsibilities: Implement a next-generation user interface using latest 
 technologies?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/csajobs/job/oU9zafww'>Community Services of America Careers - Full Stack Web Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/csajobs/job/oU9zafww'>Community Services of America Careers - Full Stack Web Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Join a stable, growing business with more than 50 years of sustained success. As 
 a   Full Stack Developer   for Saint Benedict Press, you will collaborate on,?...</p>
@@ -367,7 +367,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/incode/61ad0e2e-8f8c-4024-9fc1-05c71801b1ae'>Incode Technologies - Senior Front End Web Developer / Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/incode/61ad0e2e-8f8c-4024-9fc1-05c71801b1ae'>Incode Technologies - Senior Front End Web Developer / Engineer</a></h5> 
 <p><span class="badge badge-light">Mexico Belgrade</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -381,7 +381,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/North40Outfitters/743999691981882-web-developer'>North40 Outfitters Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/North40Outfitters/743999691981882-web-developer'>North40 Outfitters Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -402,7 +402,7 @@ Web Developer to join our busy and dynamic team based in our Dublin service?...<
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999692042525-web-developer-with-nodejs'>Prospect Infosys Inc. Web Developer with NodeJS | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999692042525-web-developer-with-nodejs'>Prospect Infosys Inc. Web Developer with NodeJS | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -461,11 +461,11 @@ w/m/d) in M?nster (published: 28.05.2019). Apply now or check the other?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/stars-group/job/oeRzafwy'>The Stars Group Careers - Web Developer (Web Poker)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/stars-group/job/oeRzafwy'>The Stars Group Careers - Web Developer (Web Poker)</a></h5> 
 <p><span class="badge badge-light">Toronto Richmond Toronto</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
